--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,24 +1,16 @@
 {
+    "root": true,
+    "parser": "@typescript-eslint/parser",
     "env": {
         "browser": true,
         "es2021": true,
         "node": true
     },
-    "extends": "prettier",
-    "overrides": [
-        {
-            "files": ["*.{json,ts,js,scss}"],
-            "rules": {
-                "indent": ["error", 4],
-                "linebreak-style": ["error", "unix"]
-            }
-        }
-    ],
-    "parserOptions": {
-        "ecmaVersion": "latest",
-        "sourceType": "module"
-    },
+    "plugins": ["@typescript-eslint", "prettier"],
+    "extends": ["eslint:recommended", "prettier"],
     "rules": {
-        "no-confusing-arrow": ["error", { "allowParens": false }]
+        "prettier/prettier": "error",
+        "arrow-body-style": "off",
+        "prefer-arrow-callback": "off"
     }
 }
