--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "build": "ng build",
         "watch": "ng build --watch --configuration development",
         "test": "ng test",
+        "lint": "eslint ./** --fix",
         "prepare": "husky install"
     },
     "private": true,
@@ -34,8 +35,8 @@
         "@typescript-eslint/eslint-plugin": "^5.38.1",
         "@typescript-eslint/parser": "5.29.0",
         "eslint": "^8.24.0",
+        "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-prettier": "^4.2.1",
-        "eslint-plugin-promise": "^6.0.1",
         "husky": "^8.0.0",
         "jasmine-core": "~4.3.0",
         "karma": "~6.4.0",
