--- a/.gitignore
+++ b/.gitignore
@@ -21,12 +21,8 @@ yarn-error.log
 *.sublime-workspace
 
 # Visual Studio Code
-.vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
-.history/*
+.vscode/
+.history/
 
 # Miscellaneous
 /.angular/cache
@@ -40,3 +36,6 @@ testem.log
 # System files
 .DS_Store
 Thumbs.db
+
+# Other
+.angular/
