--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "build": "ng build",
         "watch": "ng build --watch --configuration development",
         "test": "ng test",
-        "lint": "eslint ./** --fix",
+        "lint": "eslint */**.ts --fix",
         "prepare": "husky install"
     },
     "private": true,
@@ -21,6 +21,7 @@
         "@angular/platform-browser-dynamic": "^14.2.0",
         "@angular/router": "^14.2.0",
         "prettier-plugin-organize-imports": "^3.1.1",
+        "primeflex": "^3.2.1",
         "primeicons": "^6.0.1",
         "primeng": "^14.1.2",
         "rxjs": "~7.5.0",
