--- a/firebase.json
+++ b/firebase.json
@@ -12,7 +12,7 @@
         }
     ],
     "hosting": {
-        "public": "dist",
+        "public": "dist/tale-factory",
         "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
         "rewrites": [
             {
