--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "tale-factory",
-    "version": "0.0.0",
+    "version": "0.0.0-development",
     "scripts": {
         "ng": "ng",
         "start": "ng serve",
@@ -8,7 +8,8 @@
         "watch": "ng build --watch --configuration development",
         "test": "ng test",
         "lint": "eslint */**.ts --fix",
-        "prepare": "husky install"
+        "prepare": "husky install",
+        "semantic-release": "semantic-release"
     },
     "private": true,
     "dependencies": {
@@ -20,6 +21,7 @@
         "@angular/platform-browser": "^14.2.0",
         "@angular/platform-browser-dynamic": "^14.2.0",
         "@angular/router": "^14.2.0",
+        "firebase": "^9.12.1",
         "prettier-plugin-organize-imports": "^3.1.1",
         "primeflex": "^3.2.1",
         "primeicons": "^6.0.1",
@@ -47,6 +49,11 @@
         "karma-jasmine-html-reporter": "~2.0.0",
         "prettier": "2.7.1",
         "pretty-quick": "^3.1.3",
-        "typescript": "^4.8.4"
+        "typescript": "^4.8.4",
+        "semantic-release": "^19.0.5"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/jschlicker/tale-factory.git"
     }
 }
