--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,7 +4,8 @@
     "env": {
         "browser": true,
         "es2021": true,
-        "node": true
+        "node": true,
+        "jest": true
     },
     "plugins": ["@typescript-eslint", "prettier"],
     "extends": ["eslint:recommended", "prettier"],
