--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
         "@angular/platform-browser-dynamic": "^14.2.0",
         "@angular/router": "^14.2.0",
         "firebase": "^9.12.1",
-        "prettier-plugin-organize-imports": "^3.1.1",
         "primeflex": "^3.2.1",
         "primeicons": "^6.0.1",
         "primeng": "^14.1.2",
@@ -36,26 +35,24 @@
         "zone.js": "~0.11.4"
     },
     "devDependencies": {
+        "@angular-builders/jest": "^14.1.0",
         "@angular-devkit/build-angular": "^14.2.4",
         "@angular/cli": "~14.2.4",
         "@angular/compiler-cli": "^14.2.0",
-        "@types/jasmine": "~4.0.0",
+        "@types/jest": "^29.2.3",
         "@typescript-eslint/eslint-plugin": "^5.38.1",
         "@typescript-eslint/parser": "5.29.0",
         "eslint": "^8.24.0",
         "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-prettier": "^4.2.1",
         "husky": "^8.0.0",
-        "jasmine-core": "~4.3.0",
-        "karma": "~6.4.0",
-        "karma-chrome-launcher": "~3.1.0",
-        "karma-coverage": "~2.2.0",
-        "karma-jasmine": "~5.1.0",
-        "karma-jasmine-html-reporter": "~2.0.0",
+        "jest": "^28.1.3",
+        "ng-packagr": "^14.2.0",
         "prettier": "2.7.1",
+        "prettier-plugin-organize-imports": "^3.1.1",
         "pretty-quick": "^3.1.3",
-        "typescript": "^4.8.4",
-        "semantic-release": "^19.0.5"
+        "semantic-release": "^19.0.5",
+        "typescript": "^4.8.4"
     },
     "repository": {
         "type": "git",
