--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -3,8 +3,9 @@
     "extends": "./tsconfig.json",
     "compilerOptions": {
         "outDir": "./out-tsc/spec",
-        "types": ["jasmine"]
+        "emitDecoratorMetadata": true,
+        "types": ["jest"]
     },
-    "files": ["src/test.ts", "src/polyfills.ts"],
-    "include": ["src/**/*.spec.ts", "src/**/*.d.ts"]
+    "files": ["src/test-setup.ts", "src/polyfills.ts"],
+    "include": ["src/**/*.spec.ts", "src/**/*.d.ts", "jest.config.js"]
 }
