--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -7,5 +7,5 @@
         "types": ["jest"]
     },
     "files": ["src/test-setup.ts", "src/polyfills.ts"],
-    "include": ["src/**/*.spec.ts", "src/**/*.d.ts", "jest.config.js"]
+    "include": ["src/**/*.spec.ts", "src/**/*.d.ts", "jest.config.ts"]
 }
