--- a/angular.json
+++ b/angular.json
@@ -23,7 +23,7 @@
                         "polyfills": "src/polyfills.ts",
                         "tsConfig": "tsconfig.app.json",
                         "inlineStyleLanguage": "scss",
-                        "assets": ["src/favicon.ico", "src/assets"],
+                        "assets": ["src/favicon.ico", "src/app/assets"],
                         "styles": ["src/styles.scss"],
                         "scripts": []
                     },
